@@ -2,6 +2,7 @@
 - bugfix removed ambiguity between ternary and stream variable in template syntax
 - bugfix use caching properties of template instead of smarty object when compiling child {block}
 - bugfix {*block}...{/block*} did throw an exception in template inheritance
+- bugfix on template inheritance using nested eval or string resource in {extends} tags
 
 
 =====  RC4 =====
